# Financial-tracker

./: .gitignore  CMakeLists.txt  authorization.cpp  authorization.h  authorization.ui  dbmanager.cpp  dbmanager.h  main.cpp  masterwind.cpp  masterwind.h  masterwind.ui
